# rs_pdf

./: .env.example  .gitignore  API.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deep_seek.html  example_minimal.json  example_no_page_numbers.json  example_partial.json  example_request.json  test_api.sh  tst2.html
src/: main.rs
src/utils/: handler.rs  utils.rs
